# qbidib

./: CMakeLists.txt  bidib.cpp  bidib.h  bidib_messages.h  crc.h  main.cpp  tst_bidib.cpp
lib/: CMakeLists.txt  address.cpp  crc.cpp  crc.h  message.cpp  messagenames.cpp  messagenames.h  node.cpp  serialconnection.cpp  serialtransport.cpp  tst_bidib.cpp
lib/include/bidib/: address.h  bidib_messages.h  error.h  message.h  node.h  pack.h  serialconnection.h  serialtransport.h
